[JENKINS-68129] Fix dropdown chevrons not separating links and overflowing (#6481)

--- a/war/src/main/less/modules/table.less
+++ b/war/src/main/less/modules/table.less
@@ -127,6 +127,12 @@
     display: inline-flex;
   }
 
+  &__link {
+    .jenkins-menu-dropdown-chevron {
+      top: 0;
+    }
+  }
+
   &__button, &__icon {
     svg, .build-status-icon__wrapper, img {
       width: 24px !important;
